--- a/index.html
+++ b/index.html
@@ -11,8 +11,30 @@
     <title>Hoteles</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a href="#" class="navbar-brand">Hoteles</a>
+      <button class="nav-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"><a href="./index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="./about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Terminos y Condiciones</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">contacto</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="jumbotron">
       <h1 class="d-flex justify-content-center">Hoteles</h1>
+    </div>
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+      </nav>
     </div>
     <div class="container">
       <div class="d-flex flex-wrap">
