--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title>Hoteles</title>
   </head>
   <body>
@@ -22,7 +23,7 @@
           <li class="nav-item"><a href="./about.html" class="nav-link">Nosotros</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Terminos y Condiciones</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">contacto</a></li>
+          <li class="nav-item"><a href="./contacto.html" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
@@ -92,7 +93,7 @@
             <address>
               <h3>Oficina Central</h3>
               <p>Managua, Managua, Nicaragua</p> 
-              <p>+50525252525</p>
+              <p><span class="iconic iconic-iphone iconic-sm" title="iphone" aria-hidden="true"></span>+50525252525</p>
               <p>contacto@hotelesnicaragua.com</p>
             </address>
           </div>
