--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <li class="nav-item">
             <a href="#" class="nav-link">Terminos y Condiciones</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">contacto</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
