--- a/contacto.html
+++ b/contacto.html
@@ -33,12 +33,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="./about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="./about.html" class="nav-link">Nosotros</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
           <li class="nav-item">
             <a href="#" class="nav-link">Terminos y Condiciones</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">contacto</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
