--- a/precios.html
+++ b/precios.html
@@ -96,7 +96,18 @@
           </tbody>
         </table>
       </div>
-    </div>
+      <div class="d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <div class="card-header" style="background-color:blue; color:white;">
+            Tarjetas Aceptadas
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Tarjeta Basica</li>
+            <li class="list-group-item">Tarjeta VIP</li>
+            <li class="list-group-item">Tarjeta Black</li>
+          </ul>
+        </div>
+      </div>
 
     <footer>
       <div class="container">
