--- a/precios.html
+++ b/precios.html
@@ -62,53 +62,74 @@
     </div>
 
     <div class="container">
-      <div class="table-responsive">
-        <table class="table table-striped">
-          <thead class="thead-dark">
-            <th>Calidad</th>
-            <th>Managua</th>
-            <th>Masaya</th>
-            <th>Granada</th>
-            <th>Leon</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>⭐</td>
-              <td>$100</td>
-              <td>$120</td>
-              <td>$150</td>
-              <td>$180</td>
-            </tr>
-            <tr>
-              <td>⭐⭐</td>
-              <td>$200</td>
-              <td>$220</td>
-              <td>$250</td>
-              <td>$280</td>
-            </tr>
-            <tr>
-              <td>⭐⭐⭐</td>
-              <td>$300</td>
-              <td>$320</td>
-              <td>$350</td>
-              <td>$380</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="d-flex justify-content-center">
-        <div class="card" style="width: 18rem;">
-          <div class="card-header" style="background-color:blue; color:white;">
-            Tarjetas Aceptadas
+      <ul class="nav nav-pills" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="compara-tab" data-toggle="pill" href="#compara" role="tab" aria-controls="compara" aria-selected="true">Compara</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " id="tarjetas-tab" data-toggle="pill" href="#tarjetas" role="tab" aria-controls="tarjetas" aria-selected="false">Tarjetas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " id="comentarios-tab" data-toggle="pill" href="#comentarios" role="tab" aria-controls="comentarios" aria-selected="false">Comentarios</a>
+        </li>
+      </ul>
+
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="compara" role="tabpanel" aria-labelledby="compara-tab">
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="thead-dark">
+                <th>Calidad</th>
+                <th>Managua</th>
+                <th>Masaya</th>
+                <th>Granada</th>
+                <th>Leon</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>⭐</td>
+                  <td>$100</td>
+                  <td>$120</td>
+                  <td>$150</td>
+                  <td>$180</td>
+                </tr>
+                <tr>
+                  <td>⭐⭐</td>
+                  <td>$200</td>
+                  <td>$220</td>
+                  <td>$250</td>
+                  <td>$280</td>
+                </tr>
+                <tr>
+                  <td>⭐⭐⭐</td>
+                  <td>$300</td>
+                  <td>$320</td>
+                  <td>$350</td>
+                  <td>$380</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Tarjeta Basica</li>
-            <li class="list-group-item">Tarjeta VIP</li>
-            <li class="list-group-item">Tarjeta Black</li>
-          </ul>
+        </div>
+        <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <div class="card-header" style="background-color:blue; color:white;">
+                Tarjetas Aceptadas
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Tarjeta Basica</li>
+                <li class="list-group-item">Tarjeta VIP</li>
+                <li class="list-group-item">Tarjeta Black</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
+          <p>Comentarios</p>
         </div>
       </div>
-
+    </div>
     <footer>
       <div class="container">
         <div class="row">
