--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
     </div>  
     <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#contacto">Contacto</button>
+        <button type="button" id="contactoBtn"class="btn btn-outline-success" data-toggle="modal" data-target="#contacto">Contacto</button>
     </div>
     <div class="modal fade" id="contacto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -199,15 +199,33 @@
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script>
       $(function(){
         $("[data-toggle='tooltip']").tooltip();
         $("[data-toggle='popover']").popover();
-        $(".carousel").carousel({
+        $('.carousel').carousel({
           interval: 1000
+        });
+        $('#contacto').on('show.bs.modal', function (e){
+          console.log('El modal se esta mostrando');
+          $('#contactoBtn').removeClass('btn-outline-success');
+          $('#contactoBtn').addClass('btn-primary')
+          $('#contactoBtn').prop('disabled', true);
+        });
+        $('#contacto').on('shown.bs.modal', function (e){
+          console.log('El modal se mostro');
+        });
+        $('#contacto').on('hide.bs.modal', function (e){
+          console.log('El modal se esta ocultando');
+          $('#contactoBtn').removeClass('btn-primary');
+          $('#contactoBtn').addClass('btn-outline-success')
+          $('#contactoBtn').prop('disabled', false);
+        });
+        $('#contacto').on('hidden.bs.modal', function (e){
+          console.log('El modal se oculto');
         });
       });
     </script>
