--- a/about.html
+++ b/about.html
@@ -9,11 +9,13 @@
     />
 
     <!-- Bootstrap CSS -->
+     <!-- build:css dist/about.css -->
     <link
       rel="stylesheet"
       href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+     <!-- endbuild -->
     <title>Hoteles</title>
   </head>
   <body>
@@ -89,8 +91,10 @@
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+     <!-- build:js dist/about.js -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+     <!-- endbuild -->
   </body>
 </html>
