--- a/index.html
+++ b/index.html
@@ -205,33 +205,7 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(function(){
-        $("[data-toggle='tooltip']").tooltip();
-        $("[data-toggle='popover']").popover();
-        $('.carousel').carousel({
-          interval: 1000
-        });
-        $('#contacto').on('show.bs.modal', function (e){
-          console.log('El modal se esta mostrando');
-          $('#contactoBtn').removeClass('btn-outline-success');
-          $('#contactoBtn').addClass('btn-primary')
-          $('#contactoBtn').prop('disabled', true);
-        });
-        $('#contacto').on('shown.bs.modal', function (e){
-          console.log('El modal se mostro');
-        });
-        $('#contacto').on('hide.bs.modal', function (e){
-          console.log('El modal se esta ocultando');
-          $('#contactoBtn').removeClass('btn-primary');
-          $('#contactoBtn').addClass('btn-outline-success')
-          $('#contactoBtn').prop('disabled', false);
-        });
-        $('#contacto').on('hidden.bs.modal', function (e){
-          console.log('El modal se oculto');
-        });
-      });
-    </script>
+    <script src="js/index.js"></script>
      <!-- endbuild -->
   </body>
 </html>
